# ledger-agentic-event-store

./: .env.example  .gitignore  CHALLENGE_SUMMARY.md  DESIGN.md  DOMAIN_NOTES.md  Dockerfile.outbox-relay  IMPLEMENTATION_CHECKLIST.md  Makefile  README.md  docker-compose.kafka.yml  pyproject.toml
apps/api/: __init__.py  app.py  auth.py  main.py  settings.py
apps/web/: .env.example  index.html  package-lock.json  package.json
document_refinery/: __init__.py  pipeline.py
migrations/: 001_init_event_store.sql  002_add_projection_tables.sql  003_add_auth_tables.sql  004_add_client_analytics_projection.sql
rubric/: extraction_rules.yaml
scripts/: api-start.sh  backfill_integrity_hashes.py  dashboard-start.sh  db-start.sh  db-status.sh  db-stop.sh  kafka-start.sh  kafka-status.sh  kafka-stop.sh  migrate.sh  run_outbox_relay.py  run_refinery.py
src/: __init__.py  event_store.py  schema.sql
src/aggregates/: __init__.py  agent_session.py  audit_ledger.py  compliance_record.py  (+1 more)
tests/: test_api_auth.py  test_api_surface.py  test_command_handlers.py  test_concurrency.py  test_event_store_load_replay.py  test_gas_town.py  test_integrity.py  test_mcp_lifecycle.py  test_outbox_relay.py  test_phase2_aggregates.py  test_projection_logic.py  test_projections.py  test_refinery_chunking.py  test_refinery_indexer.py  test_refinery_layout_docling.py  test_refinery_openrouter.py  test_refinery_pdf_tools.py  test_refinery_pipeline.py  test_refinery_router.py  test_refinery_triage.py  test_refinery_vision.py  test_regulatory_package.py  test_upcasting.py  test_what_if.py
(+54 files in other folders)
