[project]
name = "ledger-agentic-event-store"
version = "0.1.0"
description = "TRP1 Week 5 - The Ledger: Agentic Event Store and Enterprise Audit Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30.0,<0.31.0",
  "docling>=2.0.0,<3.0.0",
  "fastapi>=0.116.0,<0.117.0",
  "psycopg[binary]>=3.2.0,<3.3.0",
  "pydantic>=2.11.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "orjson>=3.10.0,<4.0.0",
  "structlog>=25.0.0,<26.0.0",
  "uvicorn>=0.35.0,<0.36.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<0.29.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.11.0,<0.12.0",
  "mypy>=1.13.0,<2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
